# NixCppTemplate

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake  flake.nix  package.nix
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CppTempl.cpp  CppTemplImpl.cpp  CppTemplImpl.hpp
src/include/CppTempl/: CppTempl.hpp
tests/: CMakeLists.txt  CppTemplTests.cpp
